--- a/src/output.css
+++ b/src/output.css
@@ -590,8 +590,9 @@ video {
   }
 }
 
-.m-7{
-  margin: 1.75rem;
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .mx-6{
@@ -604,14 +605,8 @@ video {
   margin-right: auto;
 }
 
-.mx-4{
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.mx-7{
-  margin-left: 1.75rem;
-  margin-right: 1.75rem;
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .mb-12{
@@ -630,6 +625,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .mb-\[104px\]{
   margin-bottom: 104px;
 }
@@ -638,20 +637,12 @@ video {
   margin-bottom: 120px;
 }
 
-.mt-7{
-  margin-top: 1.75rem;
-}
-
 .mb-\[251px\]{
   margin-bottom: 251px;
 }
 
-.mb-8{
-  margin-bottom: 2rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
+.mt-7{
+  margin-top: 1.75rem;
 }
 
 .inline-block{
@@ -666,6 +657,15 @@ video {
   display: grid;
 }
 
+.hidden{
+  display: none;
+}
+
+.size-6{
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
 .size-\[27\.317px\]{
   width: 27.317px;
   height: 27.317px;
@@ -674,16 +674,6 @@ video {
 .size-\[35\.556px\]{
   width: 35.556px;
   height: 35.556px;
-}
-
-.size-6{
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-.size-\[23\.111px\]{
-  width: 23.111px;
-  height: 23.111px;
 }
 
 .h-8{
@@ -700,6 +690,14 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-20{
+  width: 5rem;
+}
+
+.max-w-\[200px\]{
+  max-width: 200px;
 }
 
 .max-w-\[258\.611px\]{
@@ -726,16 +724,12 @@ video {
   max-width: 96px;
 }
 
-.max-w-\[200px\]{
-  max-width: 200px;
+.flex-1{
+  flex: 1 1 0%;
 }
 
 .grow{
   flex-grow: 1;
-}
-
-.transform{
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
@@ -758,8 +752,24 @@ video {
   justify-content: space-between;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .gap-32{
   gap: 8rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-\[104px\]{
+  gap: 104px;
+}
+
+.gap-\[17\.33px\]{
+  gap: 17.33px;
 }
 
 .gap-\[74\.22px\]{
@@ -778,28 +788,16 @@ video {
   gap: 90px;
 }
 
-.gap-10{
-  gap: 2.5rem;
+.gap-1{
+  gap: 0.25rem;
 }
 
-.gap-\[104px\]{
-  gap: 104px;
-}
-
-.gap-4{
-  gap: 1rem;
-}
-
-.gap-\[17\.33px\]{
-  gap: 17.33px;
+.self-start{
+  align-self: flex-start;
 }
 
 .self-end{
   align-self: flex-end;
-}
-
-.self-center{
-  align-self: center;
 }
 
 .rounded-3xl{
@@ -810,16 +808,20 @@ video {
   border-radius: 11.765px;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .rounded-\[5px\]{
   border-radius: 5px;
 }
 
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
 .border-\[0\.588px\]{
   border-width: 0.588px;
+}
+
+.border{
+  border-width: 1px;
 }
 
 .border-pink{
@@ -827,14 +829,14 @@ video {
   border-color: hsl(322 100% 66% / var(--tw-border-opacity));
 }
 
+.border-light-red{
+  --tw-border-opacity: 1;
+  border-color: hsl(0 100% 63% / var(--tw-border-opacity));
+}
+
 .bg-pink{
   --tw-bg-opacity: 1;
   background-color: hsl(322 100% 66% / var(--tw-bg-opacity));
-}
-
-.bg-very-pale-blue{
-  --tw-bg-opacity: 1;
-  background-color: hsl(207 100% 98% / var(--tw-bg-opacity));
 }
 
 .bg-very-dark-cyan{
@@ -842,21 +844,18 @@ video {
   background-color: hsl(192 100% 9% / var(--tw-bg-opacity));
 }
 
-.bg-white{
+.bg-very-pale-blue{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.fill-\[\]{
-  fill: ;
-}
-
-.fill-\[\#00C7FA\]{
-  fill: #00C7FA;
+  background-color: hsl(207 100% 98% / var(--tw-bg-opacity));
 }
 
 .p-7{
   padding: 1.75rem;
+}
+
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-3{
@@ -867,6 +866,11 @@ video {
 .px-\[18\.24px\]{
   padding-left: 18.24px;
   padding-right: 18.24px;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .py-\[11px\]{
@@ -884,26 +888,16 @@ video {
   padding-bottom: 60px;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .pb-28{
   padding-bottom: 7rem;
 }
 
-.pt-8{
-  padding-top: 2rem;
-}
-
 .pl-4{
   padding-left: 1rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
 }
 
 .text-center{
@@ -921,6 +915,10 @@ video {
 
 .text-\[15\.238px\]{
   font-size: 15.238px;
+}
+
+.text-\[23\.111px\]{
+  font-size: 23.111px;
 }
 
 .text-\[60\.952px\]{
@@ -946,16 +944,16 @@ video {
   line-height: 1rem;
 }
 
-.text-\[23\.111px\]{
-  font-size: 23.111px;
-}
-
 .font-bold{
   font-weight: 700;
 }
 
 .font-semibold{
   font-weight: 600;
+}
+
+.leading-6{
+  line-height: 1.5rem;
 }
 
 .leading-none{
@@ -966,8 +964,8 @@ video {
   line-height: 1.5;
 }
 
-.leading-6{
-  line-height: 1.5rem;
+.leading-loose{
+  line-height: 2;
 }
 
 .text-\[\#808E9A\]{
@@ -990,6 +988,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-light-red{
+  --tw-text-opacity: 1;
+  color: hsl(0 100% 63% / var(--tw-text-opacity));
+}
+
 .shadow-button-mobile{
   --tw-shadow: 0px 0px 5px 0px rgba(255, 82, 193, 0.22);
   --tw-shadow-colored: 0px 0px 5px 0px var(--tw-shadow-color);
@@ -1003,11 +1006,6 @@ video {
 
 .drop-shadow-button-mobile{
   --tw-drop-shadow: drop-shadow(0px 3px 7px rgba(0, 37, 46, 0.22));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.invert{
-  --tw-invert: invert(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1027,17 +1025,9 @@ video {
   background-color: hsl(321 100% 78% / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#00C7FA\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 199 250 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#\]:hover{
-  background-color: #;
-}
-
-.hover\:fill-\[\#00C7FA\]:hover{
-  fill: #00C7FA;
+.hover\:text-\[\#00C7FA\]:hover{
+  --tw-text-opacity: 1;
+  color: rgb(0 199 250 / var(--tw-text-opacity));
 }
 
 .hover\:text-light-pink:hover{
@@ -1045,12 +1035,53 @@ video {
   color: hsl(321 100% 78% / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#00C7FA\]:hover{
-  --tw-text-opacity: 1;
-  color: rgb(0 199 250 / var(--tw-text-opacity));
-}
-
 @media (min-width: 1024px){
+  .lg\:mx-20{
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+
+  .lg\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .lg\:mt-20{
+    margin-top: 5rem;
+  }
+
+  .lg\:mb-\[226px\]{
+    margin-bottom: 226px;
+  }
+
+  .lg\:mb-\[120px\]{
+    margin-bottom: 120px;
+  }
+
+  .lg\:mb-\[225px\]{
+    margin-bottom: 225px;
+  }
+
+  .lg\:mb-\[26px\]{
+    margin-bottom: 26px;
+  }
+
+  .lg\:mb-\[178px\]{
+    margin-bottom: 178px;
+  }
+
+  .lg\:mb-6{
+    margin-bottom: 1.5rem;
+  }
+
+  .lg\:mb-20{
+    margin-bottom: 5rem;
+  }
+
+  .lg\:mb-10{
+    margin-bottom: 2.5rem;
+  }
+
   .lg\:size-14{
     width: 3.5rem;
     height: 3.5rem;
@@ -1061,17 +1092,24 @@ video {
     height: 49px;
   }
 
-  .lg\:size-8{
-    width: 2rem;
-    height: 2rem;
-  }
-
   .lg\:h-\[38px\]{
     height: 38px;
   }
 
   .lg\:w-\[400px\]{
     width: 400px;
+  }
+
+  .lg\:w-\[136px\]{
+    width: 136px;
+  }
+
+  .lg\:w-full{
+    width: 100%;
+  }
+
+  .lg\:w-\[520px\]{
+    width: 520px;
   }
 
   .lg\:max-w-\[1017px\]{
@@ -1098,11 +1136,199 @@ video {
     max-width: 534px;
   }
 
+  .lg\:max-w-\[600px\]{
+    max-width: 600px;
+  }
+
+  .lg\:max-w-\[520px\]{
+    max-width: 520px;
+  }
+
+  .lg\:max-w-\[340px\]{
+    max-width: 340px;
+  }
+
+  .lg\:max-w-\[344px\]{
+    max-width: 344px;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+  .lg\:flex-row-reverse{
+    flex-direction: row-reverse;
+  }
+
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
+  }
+
+  .lg\:justify-between{
+    justify-content: space-between;
+  }
+
   .lg\:gap-6{
     gap: 1.5rem;
   }
 
+  .lg\:gap-\[341px\]{
+    gap: 341px;
+  }
+
+  .lg\:gap-\[120px\]{
+    gap: 120px;
+  }
+
+  .lg\:gap-\[134px\]{
+    gap: 134px;
+  }
+
+  .lg\:gap-\[133px\]{
+    gap: 133px;
+  }
+
+  .lg\:gap-0{
+    gap: 0px;
+  }
+
+  .lg\:gap-10{
+    gap: 2.5rem;
+  }
+
+  .lg\:self-start{
+    align-self: flex-start;
+  }
+
+  .lg\:rounded-\[20px\]{
+    border-radius: 20px;
+  }
+
+  .lg\:rounded-\[50px\]{
+    border-radius: 50px;
+  }
+
+  .lg\:border-\[1px\]{
+    border-width: 1px;
+  }
+
+  .lg\:px-\[9px\]{
+    padding-left: 9px;
+    padding-right: 9px;
+  }
+
+  .lg\:py-\[31px\]{
+    padding-top: 31px;
+    padding-bottom: 31px;
+  }
+
+  .lg\:px-\[31px\]{
+    padding-left: 31px;
+    padding-right: 31px;
+  }
+
+  .lg\:py-\[9px\]{
+    padding-top: 9px;
+    padding-bottom: 9px;
+  }
+
+  .lg\:py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:py-\[25px\]{
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .lg\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:px-\[120px\]{
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+
+  .lg\:py-\[103px\]{
+    padding-top: 103px;
+    padding-bottom: 103px;
+  }
+
+  .lg\:pl-0{
+    padding-left: 0px;
+  }
+
+  .lg\:pr-4{
+    padding-right: 1rem;
+  }
+
+  .lg\:pr-8{
+    padding-right: 2rem;
+  }
+
+  .lg\:pr-7{
+    padding-right: 1.75rem;
+  }
+
+  .lg\:pr-6{
+    padding-right: 1.5rem;
+  }
+
+  .lg\:pt-\[103px\]{
+    padding-top: 103px;
+  }
+
+  .lg\:text-left{
+    text-align: left;
+  }
+
   .lg\:text-\[32px\]{
     font-size: 32px;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-\[96px\]{
+    font-size: 96px;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-\[40px\]{
+    font-size: 40px;
+  }
+
+  .lg\:shadow-button-desktop{
+    --tw-shadow: 0px 0px 9px 0px rgba(255, 82, 193, 0.22);
+    --tw-shadow-colored: 0px 0px 9px 0px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .lg\:drop-shadow-button-desktop{
+    --tw-drop-shadow: drop-shadow(0px 6px 13px rgba(0, 37, 46, 0.22));
+    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
 }
